# UniversityTask

./: .clang-format  .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
build_dir/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  FirstTask  Makefile  cmake_install.cmake  compile_commands.json  test_faculty  test_student  test_student_groups  test_university  uni
include/: app.h  cli.h  error_types.h  faculty.h  group.h  result.h  student.h  university.h  utils.h
src/: app.c  cli.c  faculty.c  group.c  main.c  student.c  university.c  utils.c
tests/: test_faculty.c  test_student.c  test_student_groups.c  test_uni.c
